# causRCA

./: .gitignore  CITATION.cff  README.md  environment.yml  pyproject.toml  requirements-causrca.txt  requirements.txt
data/dig_twin/: README.md
eval/cd/: calc_graph.py  cd_eval.py
eval/cd/results/: evaluation_results.csv  fci_default_coolant_majority.gml  fges_default_coolant_majority.gml  fges_default_full_majority.gml  fges_default_hydraulic_majority.gml  fges_default_probe_majority.gml  pc_default_full_majority.gml  pc_default_hydraulic_majority.gml  pc_default_probe_majority.gml  pcmci_default_coolant_majority.gml  pcmci_default_full_majority.gml  pcmci_default_hydraulic_majority.gml  pcmci_default_probe_majority.gml
eval/rca/: causal_rca_f1_vars_eval.py  causal_rca_unsupervised_eval.py  helpers_rca_eval.py  rca_eval.py
eval/rca/results/: cd_based_unsupervised_rca_eval_results.csv  supervised_results.csv  unsupervised_results.csv
src/causrca/cd_models/: cd_models.py
src/causrca/cd_models/libs/: fges_main.py  knowledge.py  meekrules.py  runner.py
src/causrca/cd_models/pkgs/: bnmetrics.py  bnutils.py  fges_base.py  scores.py
src/causrca/rca_models/: common.py  supervised_rca_models.py  unsupervised_rca_models.py
src/causrca/utils/: .gitkeep  discretize.py  utils.py
