[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causrca"
version = "0.1"
description = "Collection of causal discovery and RCA methods for benchmarking"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.setuptools]
packages = ["causrca"]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements-causrca.txt"]}